--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       15.- Brian Guzmán <br>
       16.- Gerardo Leyva <br>
       17.- Fernanda Domínguez <br>
+      18.- Ramon Angel Lopez <br>
     </p>
   </body>
 </html>
